# codex

./: CMakeLists.txt
codex/: CMakeLists.txt
codex/include/: codex.h
codex/include/renderer/: vulkan_renderer.h  window_manager.h
codex/src/: codex.cc
codex/src/renderer/: vulkan_renderer.cc  window_manager.cc
common/: CMakeLists.txt
common/include/: engine_common.h  i_configuration.h
core/: CMakeLists.txt
core/include/: i_configuration.h
core/include/renderer/: i_renderer.h
include/: codex.h  window_manager.h
src/: codex.cc  window_manager.cc
vulkan_renderer/: CMakeLists.txt
vulkan_renderer/include/: vulkan_renderer.h  vulkan_renderer_impl.h
vulkan_renderer/src/: vulkan_renderer_impl.cc
window_manager/: CMakeLists.txt
window_manager/include/: window_manager_impl.h
window_manager/src/: window_manager_impl.cc
